--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,5 +13,14 @@
 
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
 
+
+.results-block {
+	display: inline-block;
+}
+
+.no-padding {
+	padding: 0 !important;
+}
