Added stocks listing and remove function

--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -19,3 +19,7 @@
 <div id="stock-lookup-result">
   <%= render 'result' %>
 </div>
+
+<div class="container">
+  <%= render 'stocks/list' %>
+</div>
